--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^7.0.5",
+    "bcryptjs": "^3.0.3",
     "next": "16.1.4",
+    "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^6.10.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -20,6 +28,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "prisma": "^5.22.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
